<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   >

 

        <LinearLayout
        android:id="@+id/player_pause_icon_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="invisible" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:background="@drawable/video_pause_icon" />

        <TextView
            android:id="@+id/player_pause_time"
            android:textColor="@android:color/white"
            android:textSize="20px"
            android:layout_width="200px"
            android:layout_height="30px"
            android:layout_marginTop="15px"
            android:gravity="center" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/player_video_name_liner"
        android:layout_width="1830px"
        android:layout_height="60px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50px"
        android:background="@drawable/player_video_name_liner_bg"
        >
           <TextView
                    android:id="@+id/player_video_name"
                    style="@style/TextViewMiddleWhite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:layout_marginLeft="50px"
                    android:singleLine="true" />
     </LinearLayout>

    <!-- >[S:]volum informaion< -->

    <LinearLayout
        android:id="@+id/volumInfor_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="40px"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/volumText_video"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/volumTitle_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volumChange"
                android:textColor="@color/white"
                android:textSize="24px" />

            <TextView
                android:id="@+id/volumMinNum_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="340px"
                android:gravity="center"
                android:text="@string/volummin"
                android:textColor="@color/white"
                android:textSize="24px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/volumPrompt_video"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10px"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/volumProgress_video"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="700px"
                android:layout_height="wrap_content"
                android:max="100"
                android:progressDrawable="@drawable/progressbar" />
        </LinearLayout>
    </LinearLayout>
    <!-- >[E:]volum informaion< -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="120px" >

        <TextView
            android:id="@+id/video_subtitle_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textSize="36px" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="36px"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/player_progress_layout"
                android:layout_width="937px"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_control_top"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/player_video_name"
                    style="@style/TextViewMiddleWhite"
                    android:layout_width="600px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ellipsize="marquee"
                    android:gravity="center_horizontal"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/player_begin_time"
                        android:layout_width="106px"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/DefaultTime"
                        android:textSize="16px" />

                    <android.tclwidget.TCLSeekBar
                        android:id="@+id/player_seekbar"
                        android:layout_width="683px"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20px"
                        android:focusable="true"
                        android:max="1000" />

                    <TextView
                        android:id="@+id/player_end_time"
                        android:layout_width="106px"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20px"
                        android:gravity="left"
                        android:text="@string/DefaultTime"
                        android:textSize="16px" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player_control_layout"
            android:layout_width="937px"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_control_bottom"
            android:gravity="center"
            android:orientation="horizontal" 
            >

            <FrameLayout
                android:id="@+id/player_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3px"
                android:background="@drawable/player_pause_selector"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@+id/player_start_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="30px"
                    android:text="@string/Video_Info_Play"
                    android:textColor="#ebebeb"
                    android:textSize="16px" >
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/control_devider_line" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/player_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_previous_selector"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@+id/player_previous_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20px"
                    android:text="@string/Video_Info_Last_Film"
                    android:textColor="#ebebeb"
                    android:textSize="16px" >
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/control_devider_line" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/player_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_next_selector"
                android:clickable="true"
                android:focusable="true"
                 >

                <TextView
                    android:id="@+id/player_next_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20px"
                    android:text="@string/Video_Info_Next_Film"
                    android:textColor="#ebebeb"
                    android:textSize="16px" >
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/control_devider_line" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/player_sequence"
                android:layout_width="131px"
                android:layout_height="wrap_content"
                android:background="@drawable/player_seqence_selector"
                android:clickable="true"
                android:focusable="true"
                 >

                <TextView
                    android:id="@+id/player_sequence_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20px"
                    android:text="@string/Video_Info_RepeatMode_Normal"
                    android:textColor="#ebebeb"
                    android:textSize="16px" >
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/control_devider_line" />
            </FrameLayout>
            
            
      

            <ImageButton
                android:id="@+id/player_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_volume_selector"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/player_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_save_selector"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/player_turn3d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_3d_selector"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/player_turn3d_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20px"
                    android:text="@string/turnThree"
                    android:textColor="#ebebeb"
                    android:textSize="16px" >
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/control_devider_line" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/player_advance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_advance_selector"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@+id/player_advance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20px"
                    android:text="@string/AdvancedSetTip"
                    android:textColor="#ebebeb"
                    android:textSize="16px" >
                </TextView>

            
            </FrameLayout>

            <FrameLayout
                android:id="@+id/player_setimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_background_selector"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/player_setimage_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20px"
                    android:text="@string/image"
                    android:textColor="#ebebeb"
                    android:textSize="16px" >
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/control_devider_line" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/player_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/player_info_selector"
                android:clickable="true"
                android:focusable="true" 
                android:visibility="gone"
                >

                <TextView
                    android:id="@+id/player_info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20px"
                    android:text="@string/Video_Info_detail"
                    android:textColor="#ebebeb"
                    android:textSize="16px" >
                </TextView>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>